@@ -8,16 +8,18 @@
   <artifactId>debezium-testcontainers-test</artifactId>
   <version>1.0-SNAPSHOT</version>
   <properties>
+    <maven.compiler.release>17</maven.compiler.release>
+    <maven.compiler.testRelease>17</maven.compiler.testRelease>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <version.debezium>1.8.1.Final</version.debezium>
+    <version.debezium>2.0.0.Final</version.debezium>
   </properties>
   <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>org.testcontainers</groupId>
         <artifactId>testcontainers-bom</artifactId>
-        <version>1.12.5</version>
+        <version>1.16.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -43,13 +45,13 @@
     <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
-      <version>42.3.3</version>
+      <version>42.4.1</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
-      <version>1.7.28</version>
+      <version>1.7.36</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -79,7 +81,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.10.0</version>
+      <version>2.12.6.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -93,8 +95,7 @@
         <execution>
           <id>default-testCompile</id>
           <configuration>
-            <release>14</release>
-            <compilerArgs>--enable-preview</compilerArgs>
+            <release>17</release>
           </configuration>
         </execution>
       </executions>
@@ -102,11 +103,8 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M4</version>
+        <version>3.0.0-M6</version>
         <configuration>
-          <systemPropertyVariables>
-            <debeziumVersion>${version.debezium}</debeziumVersion>
-          </systemPropertyVariables>
           <argLine>--enable-preview</argLine>
         </configuration>
       </plugin>
